# clv-base

./: CMakeLists.txt  NOTICE  README.md
Core/: CMakeLists.txt
Core/src/: alloc_pool.h  array_deque.h  asan_notify.h  auto_thread.h  buffer_util.h  cancellable.h  cbmi.h  char_util.h  ci_string.h  config.h  config_json_parser.h  event.h  exception_help.h  hash_util.h  intrinsic_type.h  is_callable.h  job_runner.h  log_utils.h  make_pooled.h  mutex_locker.h  mutex_type.h  not_null.h  numeric_util.h  optional_ref.h  options.h  pid_controller.h  result_or.h  scope_guard.h  spinlock.h  st_alloc_pool.h  static_vector.h  tagged_pointer.h  timer.h  unique_fd.h
Core/tests/: alloc_pool_tests.cpp  array_deque_tests.cpp  auto_thread_tests.cpp  cbmi_tests.cpp  char_util_tests.cpp  ci_string_tests.cpp  config_json_parser_tests.cpp  config_tests.cpp  event_tests.cpp  hash_util_tests.cpp  intrinsic_type_tests.cpp  is_callable_tests.cpp  make_pooled_st_tests.cpp  make_pooled_tests.cpp  mutex_type_tests.cpp  not_null_tests.cpp  numeric_util_tests.cpp  optional_ref_tests.cpp  options_tests.cpp  pid_controller_tests.cpp  scope_guard_tests.cpp  st_alloc_pool_tests.cpp  tagged_pointer_tests.cpp  timer_tests.cpp
Core/tests/data/: test_config.json
NetCore/: CMakeLists.txt  README.md
NetCore/demos/: HOLE_PUNCH_DEMO.md  QUIC_SIMPLE_SERVER.md  README.md  SIMPLE_SERVER.md  STUN_TEST_CLIENT.md  UDP_ECHO_DEMO.md  hole_punch_demo.cpp  quic_echo_server.cpp  quic_simple_server.cpp  quic_test_client.cpp  server_config.json  simple_server.cpp  stun_test_client.cpp  udp_echo_demo.cpp
NetCore/demos/www/: index.html
NetCore/docs/: QUIC_IMPLEMENTATION.md  TESTING.md  UDP_MULTIPLEXER.md  micro_https.drawio  micro_tls.drawio
NetCore/src/: micro_tls_client.h  micro_tls_server.h  micro_udp_server.h  micro_udp_server_defs.h
NetCore/src/http/: HttpDefs.h  HttpProto.h  HttpRequest.h  HttpResponse.h  HttpStaticRouter.h  README.md  ack_manager.h  async_static_file_router.h  http3_apirouter.h  http3_async_static_router.h  http3_connection_handler.h  http3_frame.h  http3_fwd.h  http3_proto.h  http3_request.h  http3_session_adapter.h  qpack.h
NetCore/src/quic/: connection_id.h  quic_ack.h  quic_congestion.h  quic_connection.h  quic_connection_manager.h  quic_crypto.h  quic_frame.h  quic_key_extractor.h  quic_loss_detection.h  quic_packet.h  quic_packet_receiver.h  quic_packet_sender.h  quic_reliability.h  quic_tls.h  quic_types.h  quic_varint.h
NetCore/src/stun/: stun_client.h  stun_utils.h
NetCore/src/tun/: tun_device.cpp  tun_device.h
NetCore/src/util/: MimeType.h  byte_packer.h  ipv4_utils.h  ipv6_utils.h  netlink_helper.cpp  netlink_helper.h  nftables_client.cpp  nftables_client.h  nla_helpers.h  static_file_resolver.h  udp_connection_multiplexer.h
NetCore/test_static/: index.html  test.txt
NetCore/tests/: HttpProto_tests.cpp  HttpRequest_tests.cpp  HttpResponse_tests.cpp  HttpStaticRouter_tests.cpp  MimeType_tests.cpp  byte_packer_tests.cpp  http3_connection_handler_integration_tests.cpp  micro_tls_tests.cpp  micro_udp_server_tests.cpp  nla_helpers_tests.cpp  qpack_tests.cpp  quic_ack_tests.cpp  quic_congestion_tests.cpp  quic_connection_manager_tests.cpp  quic_connection_tests.cpp  quic_crypto_tests.cpp  quic_frame_tests.cpp  quic_loss_detection_tests.cpp  quic_packet_tests.cpp  quic_reliability_tests.cpp  quic_tls_tests.cpp  quic_varint_tests.cpp  stun_client_tests.cpp  stun_utils_tests.cpp  test_http3.sh  test_server.sh
NetCore/tests/data/: cert.pem  dh2048.pem  key.pem  pvtkey.pem
SslHelp/: CMakeLists.txt  README.md
SslHelp/src/: HelpSslAsn1.h  HelpSslBigNum.h  HelpSslBio.h  HelpSslBioMethod.h  HelpSslCertValidator.h  HelpSslCipher.h  HelpSslContext.h  HelpSslCustomBio.h  HelpSslEvpPkey.h  HelpSslEvpPkeyCtx.h  HelpSslException.h  HelpSslFileUtils.h  HelpSslHandshakeContext.h  HelpSslHmac.h  HelpSslMemBio.h  HelpSslNoRc.h  HelpSslNoRcCopy.h  HelpSslQuic.h  HelpSslSsl.h  HelpSslStreamCipher.h  HelpSslTrustStore.h  HelpSslVerifyHelper.h  HelpSslWithRc.h  HelpSslX509.h  HelpSslX509Crl.h  HelpSslX509Name.h  HelpSslX509Store.h  HelpSslX509StoreCtx.h
SslHelp/tests/: AsanVerification_tests.cpp  HelpSslAsn1_tests.cpp  HelpSslBase_tests.cpp  HelpSslBigNum_tests.cpp  HelpSslBioMethod_tests.cpp  HelpSslBio_tests.cpp  HelpSslCipher_tests.cpp  HelpSslContext_tests.cpp  HelpSslCustomBio_tests.cpp  HelpSslEvpPkeyCtx_tests.cpp  HelpSslEvpPkey_tests.cpp  HelpSslHandshakeContext_tests.cpp  HelpSslHmac_tests.cpp  HelpSslMemBio_tests.cpp  HelpSslStreamCipher_tests.cpp  HelpSslTrustStore_tests.cpp  HelpSslVerifyHelper_tests.cpp  HelpSslX509Name_tests.cpp  HelpSslX509_tests.cpp  trust_store_tests.cpp
SslHelp/tests/data/: cert.pem  key.pem
cmake/quictls/: CMakeLists.txt
